--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,5 @@ jobs:
 
             include("common.jl")
 
-            build_tarballs(["--verbose", "x86_64-w64-mingw32-cxx11"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...;
-                          preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
+            build_tarballs(["--verbose", "x86_64-w64-mingw32-cxx11"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
           '
