--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           git clone https://github.com/Zentrik/Yggdrasil.git
           cd Yggdrasil
           git fetch
-          git switch llvm-19
+          git switch llvm-19-llvm
           cd L/LLVM/LLVM_full@19
           mkdir -p bundled/patches
           echo '
