--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
@@ -21,7 +20,7 @@ jobs:
         with:
           version: '1.7'
           arch: x64
-      - name: Build LLVM on ${{ matrix.target }}}
+      - name: Build LLVM on ${{ matrix.target }}
         run: |
           set -o xtrace
           export LLVM_VERSION=$(git ls-remote https://github.com/llvm/llvm-project.git | grep 'refs/heads/main$' | awk '{print $1}')
@@ -123,5 +122,5 @@ jobs:
 
             include("../common.jl")
 
-            build_tarballs(["--verbose", "${{ matrix.target }}}"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
+            build_tarballs(["--verbose", "${{ matrix.target }}"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
           '
