--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,12 @@ jobs:
           cd Yggdrasil
           git fetch
           git switch llvm-19-llvm
-          git apply '
+          echo '
           diff --git a/L/LLVM/common.jl b/L/LLVM/common.jl
-          index a649c4d3..01432368 100644
+          index a649c4d3..fc74fcf4 100644
           --- a/L/LLVM/common.jl
           +++ b/L/LLVM/common.jl
-          @@ -48,12 +48,7 @@ if [[ ${bb_full_target} == *-sanitize+memory* ]]; then
+          @@ -48,12 +48,6 @@ if [[ ${bb_full_target} == *-sanitize+memory* ]]; then
               cp -rL ${prefix}/lib/linux/* /opt/x86_64-linux-musl/lib/clang/*/lib/linux/
           fi
 
@@ -48,11 +48,10 @@ jobs:
           -    # possibly badly compiled racey code.
           -    export CCACHE_DISABLE=true
           -fi
-          +
 
           cd ${WORKSPACE}/srcdir/llvm-project/llvm
           LLVM_SRCDIR=$(pwd)
-          '
+          ' | git apply
           cd L/LLVM/LLVM_full@19
           mkdir -p bundled/patches
           echo '
