--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,6 +109,20 @@ jobs:
            cd ${WORKSPACE}/srcdir/llvm-project/llvm
            LLVM_SRCDIR=$(pwd)
           ' | git apply
+          echo '
+          diff --git a/L/LLVM/common.jl b/L/LLVM/common.jl
+          index a649c4d3..a919d143 100644
+          --- a/L/LLVM/common.jl
+          +++ b/L/LLVM/common.jl
+          @@ -189,6 +189,7 @@ CMAKE_FLAGS+=(-DLLVM_ENABLE_PROJECTS:STRING=$LLVM_PROJECTS)
+           if [[ "${LLVM_MAJ_VER}" -gt "13" ]]; then
+               CMAKE_FLAGS+=(-DMLIR_BUILD_MLIR_C_DYLIB:BOOL=ON)
+           fi
+          +CMAKE_FLAGS+=(-DMLIR_LINK_MLIR_DYLIB:BOOL=ON)
+
+           # We want a build with no bindings
+           CMAKE_FLAGS+=(-DLLVM_BINDINGS_LIST="" )
+          ' | git apply
           cd L/LLVM/LLVM_full@19
           mkdir -p bundled/patches
           echo '
@@ -145,54 +159,6 @@ jobs:
 
            } // namespace fuzzer
           ' > bundled/patches/fix_setthreadname.patch
-          echo '
-          From fc64a5899f1c7be92ce4a71a4bffa7753cc67623 Mon Sep 17 00:00:00 2001
-          From: Zentrik <Zentrik@users.noreply.github.com>
-          Date: Sun, 1 Sep 2024 16:59:49 +0100
-          Subject: [PATCH] Revert "[MLIR][ExecutionEngine] Introduce shared library
-           (#87067)"
-
-          This reverts commit 631ae59d301496f86a8d46d28f7b12afbd12a3c1.
-          ---
-           mlir/lib/ExecutionEngine/CMakeLists.txt | 23 -----------------------
-           1 file changed, 23 deletions(-)
-
-          diff --git a/mlir/lib/ExecutionEngine/CMakeLists.txt b/mlir/lib/ExecutionEngine/CMakeLists.txt
-          index a091944b9ee7df..b7e448d5417ea9 100644
-          --- a/mlir/lib/ExecutionEngine/CMakeLists.txt
-          +++ b/mlir/lib/ExecutionEngine/CMakeLists.txt
-          @@ -97,29 +97,6 @@ add_mlir_library(MLIRExecutionEngine
-             MLIRTargetLLVMIRExport
-             )
-
-          -if(LLVM_BUILD_LLVM_DYLIB)
-          -  # Build a shared library for the execution engine. Some downstream projects
-          -  # use this library to build their own CPU runners while preserving dynamic
-          -  # linkage.
-          -  add_mlir_library(MLIRExecutionEngineShared
-          -    ExecutionEngine.cpp
-          -    SHARED
-          -
-          -    EXCLUDE_FROM_LIBMLIR
-          -
-          -    ADDITIONAL_HEADER_DIRS
-          -    ${MLIR_MAIN_INCLUDE_DIR}/mlir/ExecutionEngine
-          -
-          -    # Ensures that all necessary dependencies are resolved.
-          -    DEPENDS
-          -    MLIRExecutionEngine
-          -
-          -    LINK_LIBS PUBLIC
-          -    LLVM
-          -    MLIR
-          -    )
-          -endif()
-          -
-           get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
-           add_mlir_library(MLIRJitRunner
-             JitRunner.cpp
-          ' > bundled/patches/remove_mlir_shlib.patch
-          mkdir -p ${{ github.workspace }}/binarybuilder_storage
           julia -e '
             import Pkg
             Pkg.add("BinaryBuilder")
