--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  build:
+  build_llvm_assert:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -26,9 +26,11 @@ jobs:
         with:
           key: ${{ matrix.target }}
       - name: Build LLVM assert on ${{ matrix.target }}
+        id: build
         run: |
           set -o xtrace
           export LLVM_VERSION=$(git ls-remote https://github.com/llvm/llvm-project.git | grep 'refs/heads/main$' | awk '{print $1}')
+          echo "LLVM_VERSION=$LLVM_VERSION" >> "$GITHUB_OUTPUT"
           git clone https://github.com/Zentrik/Yggdrasil.git
           cd Yggdrasil
           git fetch
@@ -148,3 +150,9 @@ jobs:
 
             build_tarballs(["--verbose", "${{ matrix.target }}"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
           '
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: llvm-assert-${{ matrix.target }}-${{ steps.build.outputs.LLVM_VERSION }}
+          path: products
+          if-no-files-found: warn
