--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,7 +147,7 @@ jobs:
             Pkg.add("Pkg")
             Pkg.add("LibGit2")
 
-            version = VersionNumber(ENV["LLVM_VERSION_MAJOR"], 0, 0)
+            version = VersionNumber(parse(Int, ENV["LLVM_VERSION_MAJOR"]), 0, 0)
 
             include("../common.jl")
 
