--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,6 +154,7 @@ jobs:
             Pkg.add("BinaryBuilderBase")
             Pkg.add("Pkg")
             Pkg.add("LibGit2")
+            using BinaryBuilderBase
 
             version = VersionNumber(parse(Int, ENV["LLVM_VERSION_MAJOR"]), 0, 0)
 
