--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,6 @@ jobs:
         BINARYBUILDER_USE_CCACHE: true
         BINARYBUILDER_AUTOMATIC_APPLE: true
         BINARYBUILDER_STORAGE_DIR: ${{ github.workspace }}/binarybuilder_storage
-        BINARYBUILDER_RUNNER: privileged
-        BINARYBUILDER_USE_SQUASHFS: true
     strategy:
       fail-fast: false
       matrix:
@@ -168,7 +166,7 @@ jobs:
 
             include("../common.jl")
 
-            build_tarballs(["--verbose", "${{ matrix.target }}"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
+            build_tarballs(["--verbose", "${{ matrix.target }}", "--skip-audit-check"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
           '
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
