--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,20 @@ on:
   schedule:
     - cron: '0 0 * * *'
 
-# needed to allow julia-actions/cache to delete old caches that it has created
-permissions:
-  actions: write
-  contents: read
-
 jobs:
+  fetch_llvm_version:
+    runs-on: ubuntu-latest
+    outputs: 
+      LLVM_VERSION: ${{ steps.Fetch.outputs.LLVM_VERSION }}
+      LLVM_VERSION_MAJOR: ${{ steps.Fetch.outputs.LLVM_VERSION_MAJOR }}
+    steps:
+      - name: "Fetch"
+        run: |
+          set -o xtrace
+          echo "LLVM_VERSION=$$(git ls-remote https://github.com/llvm/llvm-project.git | grep 'refs/heads/main$' | awk '{print $1}')" >> "$GITHUB_OUTPUT"
+          echo "LLVM_VERSION_MAJOR=$(curl -s https://raw.githubusercontent.com/llvm/llvm-project/$LLVM_VERSION/cmake/Modules/LLVMVersion.cmake | grep 'set(LLVM_VERSION_MAJOR' | awk '{print $2}' | tr -d ')')" >> "$GITHUB_OUTPUT"
   build_llvm_assert:
+    needs: fetch_llvm_version
     runs-on: ubuntu-latest
     env:
         BINARYBUILDER_USE_CCACHE: true
@@ -26,6 +33,27 @@ jobs:
           - aarch64-apple-darwin
           - i686-w64-mingw32-cxx11
     steps:
+      - name: Maximize build disk space (Only remove unwanted software)
+          # You may pin to the exact commit or the version.
+          # uses: AdityaGarg8/remove-unwanted-software@8831c82abf29b34eb2caac48d5f999ecfc0d8eef
+        uses: AdityaGarg8/remove-unwanted-software@v4.1
+        with:
+          # Removes .NET runtime and libraries. (frees ~2 GB)
+          remove-dotnet: true
+          # Removes Android SDKs and Tools. (frees ~9 GB)
+          remove-android: true
+          # Removes GHC (Haskell) artifacts. (frees ~5.2 GB)
+          remove-haskell: true
+          # Removes CodeQL Action Bundles. (frees ~5.4 GB)
+          remove-codeql: true
+          # Removes cached Docker images. (frees ~3.2 GB)
+          remove-docker-images: true
+          # Removes unwanted large Apt packages. (frees ~3.1 GB)
+          remove-large-packages: true
+          # Removes cached tools used by setup actions by GitHub. (frees ~8.3 GB)
+          remove-cached-tools: true
+          # Enables detailed logging of the action
+          verbose: true
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1.7'
@@ -45,9 +73,6 @@ jobs:
         id: build
         run: |
           set -o xtrace
-          export LLVM_VERSION=$(git ls-remote https://github.com/llvm/llvm-project.git | grep 'refs/heads/main$' | awk '{print $1}')
-          echo "LLVM_VERSION=$LLVM_VERSION" >> "$GITHUB_OUTPUT"
-          export LLVM_VERSION_MAJOR=$(curl -s https://raw.githubusercontent.com/llvm/llvm-project/$LLVM_VERSION/cmake/Modules/LLVMVersion.cmake | grep 'set(LLVM_VERSION_MAJOR' | awk '{print $2}' | tr -d ')')
           git clone https://github.com/Zentrik/Yggdrasil.git
           cd Yggdrasil
           git fetch
@@ -162,15 +187,15 @@ jobs:
             Pkg.add("Pkg")
             Pkg.add("LibGit2")
 
-            version = VersionNumber(parse(Int, ENV["LLVM_VERSION_MAJOR"]), 0, 0)
+            version = VersionNumber(parse(Int, ENV["${{ needs.fetch_llvm_version.outputs.LLVM_VERSION_MAJOR }}"]), 0, 0)
 
             include("../common.jl")
 
-            build_tarballs(["--verbose", "${{ matrix.target }}", "--skip-audit-check"], configure_build([], version; assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
+            build_tarballs(["--verbose", "${{ matrix.target }}", "--skip-audit"], configure_build([], version; update_sdk=false, assert=true, experimental_platforms=true, git_ver=ENV["${{ needs.fetch_llvm_version.outputs.LLVM_VERSION }}"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
           '
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: llvm-assert-${{ matrix.target }}-${{ steps.build.outputs.LLVM_VERSION }}
+          name: llvm-assert-${{ matrix.target }}-${{ needs.fetch_llvm_version.outputs.LLVM_VERSION }}
           path: ${{ github.workspace }}/Yggdrasil/L/LLVM/LLVM_full@19/products
           if-no-files-found: warn
