--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   fetch_llvm_version:
     runs-on: ubuntu-latest
-    outputs: 
+    outputs:
       LLVM_VERSION: ${{ steps.fetch.outputs.LLVM_VERSION }}
       LLVM_VERSION_MAJOR: ${{ steps.fetch.outputs.LLVM_VERSION_MAJOR }}
     steps:
@@ -67,8 +67,18 @@ jobs:
         id: cache_timestamp
         run: echo "timestamp=$(date +%s)" >> "$GITHUB_OUTPUT"
       - name: Cache BinaryBuilder Storage Directory
+        if: github.ref == 'refs/heads/master'
         id: cache
         uses: actions/cache@v4
+        with:
+          path: ${{ github.workspace }}/binarybuilder_storage
+          key: ${{ matrix.target }}-${{ steps.cache_timestamp.outputs.timestamp }}
+          restore-keys: |
+               ${{ matrix.target }}
+      - name: Restore Cached BinaryBuilder Storage Directory
+        if: github.ref != 'refs/heads/master'
+        id: cache
+        uses: actions/cache/restore@v4
         with:
           path: ${{ github.workspace }}/binarybuilder_storage
           key: ${{ matrix.target }}-${{ steps.cache_timestamp.outputs.timestamp }}
